--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,83 @@
+.home{
+  background-image: url('../public/assets/img/Home/BackgroundWeb.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding-top: 150px;
+}
+
+.home h1 {
+  font-size: 60px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  width: 60%;
+}
+
+.home p {
+  width: 50%;
+}
+
+
+.about h1 {
+  font-size: 47px;
+  font-weight: bold;
+}
+
+
+.about p {
+  color: white;
+  width: 100%;
+  margin-top: 20px;
+  font-size: 17px;
+}
+
+.about {
+  background-color: #252626;
+  padding-top: 100px;
+}
+
+.navbar {
+  background-color: #353636;
+}
+
+.services {
+  background-color: #282c34;
+}
+
+.services h1 {
+  font-size: 47px;
+  font-weight: bold;
+  color:  white;
+  margin-top: 50px;
+  padding-top: 90px;
+}
+
+.services p {
+  font-size: 20px;
+}
+
+.footer {
+  background-color: #353636;
+}
+
+.footer h5 {
+  color: white;
+  margin-top: 7px;
+  font-weight: bold;
+}
+
+.footer p {
+  color: white;
+}
+
+
+
+
+
+
+
 .App {
-  text-align: center;
+  text-align: left;
 }
 
 .App-logo {
