--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@
 
 .home p {
   width: 50%;
+  --animation-delay: 0.9s;
 }
 
 
@@ -89,11 +90,11 @@
   margin-top: 40px;
   font-weight: bold;
   text-decoration: underline;
-  text-underline-offset: 10px;
+  text-underline-offset: 10px; 
 }
 
 .more p {
-  color: gray;
+  font-size: 20px;
   margin-top: 20px;
   margin-bottom: 50px;
 }
