--- a/src/App.css
+++ b/src/App.css
@@ -1,54 +1,74 @@
 .home{
-  background-image: url('../public/assets/img/Home/BackgroundWeb.png');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  padding-top: 100px;
+  padding-top: 140px;
 }
 
 .home h1 {
-  font-size: 60px;
+  color: black;
+  font-size: 40px;
   font-weight: bold;
+  width: 100%;
+  font-family: "Poppins", sans-serif;
+}
+
+.home h2 {
+  color: black;
+  font-weight: bold;
+  font-size: 40px;
   margin-bottom: 20px;
-  width: 60%;
+  font-family: "Poppins", sans-serif;
 }
 
 .home p {
-  width: 50%;
+  color: black;
+  width: 100%;
   --animation-delay: 0.9s;
 }
 
 
 .about h1 {
-  font-size: 47px;
+  font-family: "Poppins", sans-serif;
+  color: #00aeef;
+  font-size: 40px;
   font-weight: bold;
+  margin-top: 50px;
+  text-align: left;
+}
+
+.about h2 {
+  font-family: "Poppins", sans-serif;
+  color: #007db1;
+  font-weight: bold;
+  padding-top: 80px;
+  font-size: 40px;
 }
 
 
 .about p {
-  color: white;
-  width: 100%;
+  color: black;
+  width: 80%;
   margin-top: 20px;
-  font-size: 17px;
+  font-size: 20px;
+  text-align: justify;
 }
 
 .about {
-  background-color: #252626;
+  background-color: white;
   padding-top: 100px;
 }
 
 .navbar {
-  background-color: #353636;
+  background-color: white;
 }
 
 .services {
-  background-color: #282c34;
+  background-color: white;
 }
 
 .services h1 {
-  font-size: 47px;
+  font-family: "Poppins", sans-serif;
+  font-size: 40px;
   font-weight: bold;
-  color:  white;
+  color:  #154f83;
   margin-top: 50px;
   padding-top: 90px;
 }
@@ -58,35 +78,29 @@
 }
 
 .footer {
-  background-color: #353636;
+  background-color: white;
 }
 
 .footer h5 {
-  color: white;
+  color: black;
+  font-size: 20px;
   margin-top: 7px;
-  font-weight: bold;
-  text-decoration: underline;
-  text-underline-offset: 10px;
 }
 
 .footer p {
-  color: white;
-  margin-top: 50px;
-}
-
-.more h2 {
-  font-weight: bold;
-  color: darkslategray;
-  padding-top: 70px;
+  text-align: end;
+  opacity: 50%;
+  font-size: 15px;
+  color: black;
   margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-.more h3 {
-  font-weight: bold;
+  margin-left: 20px;
 }
 
 .more h5 {
+  color: white;
+  font-family: "Poppins", sans-serif;
+  text-align: center;
+  font-size: 25px;
   margin-top: 40px;
   font-weight: bold;
   text-decoration: underline;
@@ -94,25 +108,16 @@
 }
 
 .more p {
+  color: white;
+  text-align: justify;
   font-size: 20px;
   margin-top: 20px;
   margin-bottom: 50px;
 }
 
-.prinsip {
-  background-color: #252626;
-}
 
-.prinsip h2 {
-  color: white;
-  font-weight: bold;
-  padding-top: 80px;
-}
 
-.prinsip p {
-  color: darkgray;
-  font-size: 18px;
-}
+
 
 
 
