--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .home{
   padding-top: 140px;
+  background-image: url('../public/assets/img/1.png');
+  background-size: cover;
+  background-position-y: center;
 }
 
 .home h1 {
@@ -24,6 +27,36 @@
   --animation-delay: 0.9s;
 }
 
+.form-container {
+  text-align: center;
+}
+
+.more {
+  background-image: url('../public/assets/img/2.png');
+  background-size: cover;
+  background-position-x: 18px;
+  background-repeat: no-repeat;
+}
+
+.more h5 {
+  color: white;
+  font-family: "Poppins", sans-serif;
+  text-align: center;
+  font-size: 25px;
+  margin-top: 40px;
+  font-weight: bold;
+  text-decoration: underline;
+  text-underline-offset: 10px; 
+}
+
+.more p {
+  color: white;
+  text-align: justify;
+  font-size: 20px;
+  margin-top: 20px;
+  margin-bottom: 50px;
+}
+
 
 .about h1 {
   font-family: "Poppins", sans-serif;
@@ -35,6 +68,7 @@
 }
 
 .about h2 {
+  text-align: justify;
   font-family: "Poppins", sans-serif;
   color: #007db1;
   font-weight: bold;
@@ -46,7 +80,7 @@
 .about p {
   color: black;
   width: 80%;
-  margin-top: 20px;
+  margin-top: 10px;
   font-size: 20px;
   text-align: justify;
 }
@@ -65,6 +99,7 @@
 }
 
 .services h1 {
+  text-align: left;
   font-family: "Poppins", sans-serif;
   font-size: 40px;
   font-weight: bold;
@@ -74,6 +109,7 @@
 }
 
 .services h3 {
+  text-align: left;
   font-family: "Poppins", sans-serif;
   font-size: 25px;
   font-weight: bold;
@@ -104,25 +140,19 @@
   margin-left: 20px;
 }
 
-.more h5 {
-  color: white;
+.catalog h1 {
   font-family: "Poppins", sans-serif;
-  text-align: center;
-  font-size: 25px;
-  margin-top: 40px;
+  color: #007db1;
+  font-size: 40px;
   font-weight: bold;
-  text-decoration: underline;
-  text-underline-offset: 10px; 
+  margin-top: 50px;
+  text-align: center;
 }
 
-.more p {
-  color: white;
-  text-align: justify;
+.catalog p {
+  text-align: center;
   font-size: 20px;
-  margin-top: 20px;
-  margin-bottom: 50px;
 }
-
 
 
 
