--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .home{
   padding-top: 140px;
-  background-image: url('../public/assets/img/1.png');
+  /* background-image: url('../public/assets/img/1.png'); */
   background-size: cover;
   background-position-y: center;
 }
@@ -32,7 +32,7 @@
 }
 
 .more {
-  background-image: url('../public/assets/img/2.png');
+  /* background-image: url('../public/assets/img/2.png'); */
   background-size: cover;
   background-position-x: 18px;
   background-repeat: no-repeat;
@@ -153,8 +153,6 @@
   text-align: center;
   font-size: 20px;
 }
-
-
 
 
 
