--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,14 @@
-.home1{
+.home1 {
   padding-top: 140px;
-  /* background-image: url('../public/assets/img/1.png'); */
-  background-size: cover;
-  background-position-y: center;
+  background-image: url('../public/assets/img/bg2.png');
+  background-size: cover; 
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 
+
 .home1 h1 {
-  color: black;
+  color: white;
   font-size: 40px;
   font-weight: bold;
   width: 100%;
@@ -14,7 +16,7 @@
 }
 
 .home1 h2 {
-  color: black;
+  color: white;
   font-weight: bold;
   font-size: 40px;
   margin-bottom: 20px;
@@ -22,20 +24,13 @@
 }
 
 .home1 p {
-  color: black;
+  color: white;
   width: 100%;
   --animation-delay: 0.9s;
 }
 
 .form-container {
   text-align: center;
-}
-
-.more {
-  /* background-image: url('../public/assets/img/2.png'); */
-  background-size: cover;
-  background-position-x: 18px;
-  background-repeat: no-repeat;
 }
 
 .more h5 {
@@ -91,7 +86,7 @@
 }
 
 .navbar {
-  background-color: white;
+  background-color:#282c34;
 }
 
 .services {
@@ -121,12 +116,12 @@
 }
 
 .footer {
-  background-color: white;
+  background-color: #007db1;
 }
 
 .footer h5 {
   opacity: 70%;
-  color: black;
+  color: white;
   font-size: 20px;
   margin-top: 7px;
 }
@@ -135,7 +130,7 @@
   text-align: end;
   opacity: 50%;
   font-size: 15px;
-  color: black;
+  color: white;
   margin-top: 20px;
   margin-left: 20px;
 }
@@ -150,6 +145,7 @@
 }
 
 .catalog p {
+  font-family: "Poppins", sans-serif;
   text-align: center;
   font-size: 20px;
 }
