--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .home1 {
   padding-top: 140px;
-  background-image: url('../public/assets/img/bg2.png');
+  background-image: url('../public/assets/img/bg.png');
   background-size: cover; 
   background-position: center center;
   background-repeat: no-repeat;
@@ -9,7 +9,7 @@
 
 .home1 h1 {
   color: white;
-  font-size: 40px;
+  font-size: 47px;
   font-weight: bold;
   width: 100%;
   font-family: "Poppins", sans-serif;
@@ -18,7 +18,7 @@
 .home1 h2 {
   color: white;
   font-weight: bold;
-  font-size: 40px;
+  font-size: 47px;
   margin-bottom: 20px;
   font-family: "Poppins", sans-serif;
 }
@@ -37,8 +37,8 @@
   color: white;
   font-family: "Poppins", sans-serif;
   text-align: center;
-  font-size: 25px;
-  margin-top: 40px;
+  font-size: 23px;
+  margin-top: 30px;
   font-weight: bold;
   text-decoration: underline;
   text-underline-offset: 10px; 
@@ -47,7 +47,7 @@
 .more p {
   color: white;
   text-align: justify;
-  font-size: 20px;
+  font-size: 18px;
   margin-top: 20px;
   margin-bottom: 50px;
 }
@@ -68,6 +68,7 @@
   color: #007db1;
   font-weight: bold;
   padding-top: 80px;
+  margin-bottom: 20px;
   font-size: 40px;
 }
 
@@ -76,7 +77,7 @@
   color: black;
   width: 80%;
   margin-top: 10px;
-  font-size: 20px;
+  font-size: 18px;
   text-align: justify;
 }
 
@@ -86,11 +87,11 @@
 }
 
 .navbar {
-  background-color: #212529;
+  background-color: white;
 }
 
 .services {
-  background-color: white;
+  background-image: url('../public/assets/img/bg2.png');
 }
 
 .services h1 {
@@ -98,16 +99,9 @@
   font-family: "Poppins", sans-serif;
   font-size: 40px;
   font-weight: bold;
-  color:  #154f83;
-  margin-top: 50px;
-  padding-top: 90px;
-}
-
-.services h3 {
-  text-align: left;
-  font-family: "Poppins", sans-serif;
-  font-size: 25px;
-  font-weight: bold;
+  color:  white;
+  margin-top: 40px;
+  padding-top: 100px;
 }
 
 .services p {
@@ -116,23 +110,21 @@
 }
 
 .footer {
-  background-color: #007db1;
-}
-
-.footer h5 {
-  opacity: 70%;
-  color: white;
-  font-size: 20px;
-  margin-top: 7px;
+  background-color: white;
 }
 
 .footer p {
-  text-align: end;
+  font-size: 17px;
+  opacity: 50%;
+  text-align: center;
+}
+
+.footer h5 {
+  text-align: center;
   opacity: 50%;
   font-size: 15px;
-  color: white;
-  margin-top: 20px;
-  margin-left: 20px;
+  color: black;
+  margin-bottom: 40px;
 }
 
 .catalog h1 {
@@ -140,7 +132,7 @@
   color: #007db1;
   font-size: 40px;
   font-weight: bold;
-  margin-top: 50px;
+  margin-top: 40px;
   text-align: center;
 }
 
